--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@
     Template Author : pixelhint.com
     Author Email    : contact@pixelhint.com
     License         : pixelhint.com/license
-    
-    
+
+
     *****************************************
-    
-    
+
+
     - Header
     - Hero section
     - Featured on seaction
@@ -19,7 +19,7 @@
     - Subscription section
     - Footer
     - Responsive CSS
-    
+
 
 */
 
@@ -212,7 +212,8 @@ header .social li:first-child{
 	position: relative;
 	width: 100%;
 	height: 360px;
-	background: url('../img/hero.jpg') no-repeat fixed center center;	
+	background: url('../img/hero.jpg') no-repeat fixed;
+	background-position: 0px 0px !important;
 	background-size: cover;
 }
 
@@ -460,27 +461,27 @@ a.app_link{
 
 .about .features_list ul li.camera_icon{
 	background: url('../img/icon1.png') no-repeat;
-	background-position: 0 12px; 
+	background-position: 0 12px;
 }
 
-.about .features_list ul li.video_icon{	
+.about .features_list ul li.video_icon{
 	background: url('../img/icon2.png') no-repeat;
-	background-position: 0 12px; 
+	background-position: 0 12px;
 }
 
-.about .features_list ul li.eye_icon{	
+.about .features_list ul li.eye_icon{
 	background: url('../img/icon3.png') no-repeat;
-	background-position: 0 12px; 
+	background-position: 0 12px;
 }
 
-.about .features_list ul li.pic_icon{	
+.about .features_list ul li.pic_icon{
 	background: url('../img/icon4.png') no-repeat;
-	background-position: 0 12px; 
+	background-position: 0 12px;
 }
 
-.about .features_list ul li.loc_icon{	
+.about .features_list ul li.loc_icon{
 	background: url('../img/icon5.png') no-repeat;
-	background-position: 3px 12px; 
+	background-position: 3px 12px;
 }
 
 .about .features_list ul li span{
@@ -581,7 +582,7 @@ a.app_link{
 	color: #efefef;
 	font-family: "open_semibold", Helvetica, Arial, sans-serif;
 	font-size: 16px;
-	margin-bottom: 10px; 
+	margin-bottom: 10px;
 }
 
 .testimonials .testimonials_list blockquote .job{
@@ -689,7 +690,7 @@ a.app_link{
 	-moz-border-bottom-left-radius: 2px;
 	-webkit-border-bottom-left-radius: 2px;
 
-	
+
 }
 
 .sub_box #mc_submit{
@@ -832,7 +833,7 @@ footer .copyright a{
 
 	header nav li a{
 		display: block;
-		width: 100%;	
+		width: 100%;
 		padding: 20px 0;
 		border-bottom: 1px solid #389965;
 	}
